<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:name=".ProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textColor="@color/green"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/editTextEmergencyNumber"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:hint="@string/emergency_number_1"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:backgroundTint="@color/green"
        android:minHeight="100dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/green" />

</LinearLayout>
